del the counting and  the Endpoints
